<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/edit_address_id_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_address_id" />

        <TextView
            android:id="@+id/edit_address_name_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_name" />

        <EditText
            android:id="@+id/edit_address_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_address_name_default"
            android:autofillHints="@string/edit_address_name_default"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/edit_address_phone_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_phone" />

        <EditText
            android:id="@+id/edit_address_phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_address_phone_default"
            android:autofillHints="@string/edit_address_phone_default"
            android:inputType="phone" />

        <TextView
            android:id="@+id/edit_address_street_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_street_address" />

        <EditText
            android:id="@+id/edit_address_street_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_address_street_address_default"
            android:autofillHints="@string/edit_address_street_address_default"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/edit_address_city_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_city" />

        <EditText
            android:id="@+id/edit_address_city_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_address_city_default"
            android:autofillHints="@string/edit_address_city_default"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/edit_address_province_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_province" />

        <EditText
            android:id="@+id/edit_address_province_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_address_province_default"
            android:autofillHints="@string/edit_address_province_default"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/edit_address_postal_code_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_postal_code" />

        <EditText
            android:id="@+id/edit_address_postal_code_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edit_address_postal_code_default"
            android:autofillHints="@string/edit_address_postal_code_default"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/edit_address_country_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/edit_address_country" />

        <EditText
            android:id="@+id/edit_address_country_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/edit_address_country_default"
            android:ems="10"
            android:hint="@string/edit_address_country_default"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/edit_address_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#F44336"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_address_delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/edit_address_delete" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/edit_address_confirm_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/edit_address_confirm" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>